force-app/main/default/objects/Wholesale_Billing_Account__c/Wholesale_Billing_Account__c.object-meta.xml
<CustomObject>
    <description>Billing account no for wholesale accounts to be used on wholesale orders.</description>
    <label>Wholesale Billing Account</label>
    <nameField>
        <label>Billing Account No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wholesale Billing Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>