force-app/main/default/objects/Wholesale_Billing_Account__c/fields/Billing_Info__c.field-meta.xml
<CustomField>
    <fullName>Billing_Info__c</fullName>
    <formula>Name +  &quot; &quot; + text(Product_Group__c) + &quot; &quot; + Additional_Information__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Info</label>
    <type>Text</type>
</CustomField>