force-app/main/default/objects/Wholesale_Billing_Account__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <label>Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Capacity</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>SMS Gateway</fullName>
            </value>
            <value>
                <fullName>Colocation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>