force-app/main/default/objects/Wholesale_Billing_Account__c/fields/Wholesale_Account__c.field-meta.xml
<CustomField>
    <fullName>Wholesale_Account__c</fullName>
    <label>Wholesale Account</label>
    <referenceTo>Wholesale_Account__c</referenceTo>
    <relationshipName>Billing_Account_Numbers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>