force-app/main/default/objects/Wholesale_Billing_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Wholesale_Account__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Additional_Information__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>